# Qubee

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  RELEASE.md  SECURITY.md  build.gradle  build_rust.ps1  build_rust.sh  gradle.properties  ndk.ps1  settings.gradle  skills.md
.cargo/: audit.toml
.github/workflows/: android-smoke.yml  ci.yml  instrumented-tests.yml  jni-contracts.yml  neuralegion.yml  release.yml  rust-clippy.yml  rust.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/qubee/messenger/security/: SqlCipherKeyProviderTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/appshell/: AndroidManifest.xml
app/src/main/appshell/java/com/qubee/messenger/background/: RelaySyncWorker.kt
app/src/main/appshell/java/com/qubee/messenger/crypto/: CryptoEngine.kt  CryptoModels.kt  QubeeManager.kt  RelayCryptoEngine.kt
app/src/main/appshell/java/com/qubee/messenger/data/: ConversationTrustPolicy.kt  MessengerRepository.kt  QubeeServiceLocator.kt
app/src/main/appshell/java/com/qubee/messenger/model/: Models.kt  UnlockModels.kt
app/src/main/appshell/res/drawable/: ic_qubee_launcher.xml
app/src/main/appshell/res/values/: strings.xml  themes.xml
app/src/main/java/com/qubee/android/: MainActivity.kt
app/src/main/java/com/qubee/android/kotlin/: DidResolver.kt  FidoHybridAuth.kt  ProtocolSpecExporter.kt  SignatureScheme.kt
app/src/main/java/com/qubee/data/repository/: MessageRepository.kt
app/src/main/java/com/qubee/messenger/: QubeeApplication.kt
app/src/main/java/com/qubee/messenger/crypto/: CryptoModels.kt  EncryptedPayloads.kt  QubeeManager.kt
app/src/main/java/com/qubee/messenger/di/: DatabaseModule.kt
app/src/main/java/com/qubee/messenger/groups/: GroupInvite.kt  GroupMemberInfo.kt  GroupSummary.kt
app/src/main/java/com/qubee/messenger/identity/: IdentityBundle.kt
app/src/main/java/com/qubee/messenger/network/: LocalDiscoveryResolver.kt  NetworkCallback.kt  NetworkResolver.kt
app/src/main/java/com/qubee/messenger/security/: SqlCipherKeyProvider.kt  TrustStatePolicy.kt
app/src/main/java/com/qubee/messenger/service/: MessageService.kt
app/src/main/java/com/qubee/messenger/util/: HexUtils.kt  NFCManager.kt  PermissionHelper.kt  QRCodeScanner.kt  QrUtils.kt
app/src/main/jniLibs/arm64-v8a/: libqubee_crypto.d  qubee_crypto  qubee_crypto.d  qubee_relay_server.d
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_qubee_mark.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: bottom_nav_menu.xml  main_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/qubee/messenger/data/: MessengerRepositoryTest.kt
app/src/test/java/com/qubee/messenger/security/: TrustStatePolicyTest.kt
app/src/test/java/com/qubee/messenger/state/: TrustStateMachineTest.kt
app/src/test/java/com/qubee/messenger/transport/: HistoryReconciliationTest.kt  RelayEnvelopeValidatorTest.kt
app/src/test/java/com/qubee/messenger/ui/: ResetButtonScreenshotTest.kt
benches/: group_encrypt_decrypt.rs  kyber_kem.rs  mldsa_sign_verify.rs
docs/: ANDROID_REBUILD_PLAN.md  AUDIT_REMEDIATION_PASS3.md  AUDIT_REMEDIATION_PASS4.md  AUDIT_REMEDIATION_PASS5.md  AUDIT_REMEDIATION_PASS6.md  AUDIT_REMEDIATION_PASS8.md  COMPILATION_FIXES.md  GETTING_STARTED_ANDROID_SHELL.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STRATEGY_ALIGNMENT.md  JNI_BRIDGE_CONTRACT.md  LOCAL_BOOTSTRAP_TURN_REHYDRATION.md  PROTOTYPE_TO_PRODUCTION_GAP.md  QR_AND_RELAY_RESILIENCE.md  QR_INVITE_BOOTSTRAP.md  REAL_LOCAL_BOOTSTRAP_PATH.md  ROADMAP_ALPHA.md  ROOM_RELAY_CRYPTO_WIRING.md  RUST_REMEDIATION_PASS_1.md  RUST_REMEDIATION_PASS_2.md  SDP_ICE_RTC_PATH.md  TRUST_AND_HISTORY_RECONCILIATION.md  TRUST_RESET_MULTI_DEVICE.md  UNLOCK_AND_WEBRTC_TRANSITION.md  VISUAL_SCREEN_AUDIT.md  WEBSOCKET_RELAY_AND_NATIVE_BUNDLES.md  ZERO_SERVER_BOOTSTRAP_NOTES.md  build-status.md  design-system.md  double-ratchet-design.md  reproducible-builds.md  screenshot-tests.md  two-device-walkthrough.md
docs/architecture/: crypto-flow.md  protocol-map.md
docs/branding/: README.md
docs/manual-testing/: two-device-e2e.md
docs/mockups/: README.md
docs/perf/: baseline.md
docs/protocol/: device-linking.md  identity-bundle.md  message-envelope.md  native-api.md  session-state.md  trust-state-machine.md
docs/testing/: ALPHA_VERTICAL_SLICE.md
gradle/wrapper/: gradle-wrapper.properties
kotlin/: MediaSender.kt  MessageSerializer.kt  OfflineQueue.kt  PrivacyUtils.kt  RustSignaling.kt  VideoCallManager.kt
scripts/: audit_message_file_bridge.sh  check_jni_contracts.sh  qubee_doctor.sh
src/: audio.rs  config.rs  dilithium_identity.rs  ephemeral_keys.rs  errors.rs  file_transfer.rs  hybrid_ratchet.rs  identity.rs  jni_api.rs  lib.rs  logging.rs  main.rs  media_devices.rs  native_contract.rs  oob_secrets.rs  relay_protocol.rs  relay_security.rs  sas.rs  secure_message.rs  sessions.rs
src/audit/: mod.rs  security_auditor.rs
src/calling/: call_manager.rs  media_encryption.rs  mod.rs  peer_connection.rs  signaling.rs  webrtc_manager.rs
src/crypto/: double_ratchet.rs  enhanced_ratchet.rs  identity.rs  mod.rs
src/groups/: group_crypto.rs  group_events.rs  group_handshake.rs  group_invite.rs  group_manager.rs  group_message.rs  group_permissions.rs  handshake_handlers.rs  mod.rs  sender_keys.rs
src/identity/: contact_manager.rs  identity_key.rs  mod.rs  signal_protocol.rs  zk_proof.rs
src/lib/: lib.rs
src/network/: mod.rs  p2p_node.rs
src/onboarding/: mod.rs
src/security/: mod.rs  secure_keystore.rs  secure_memory.rs  secure_rng.rs
src/sessions/: handshake.rs
src/storage/: mod.rs  secure_keystore.rs
src/testing/: security_tests.rs
tests/: group_handshake_e2e.rs  group_message_e2e.rs  jni_message_file_bridge_smoke.rs  p2p_two_node_e2e.rs  wire_stability.rs
(+111 files in other folders)
