[package]
name = "qubee_crypto"
version = "0.2.0"
edition = "2021"
authors = ["Victor Åhgren"]
description = "Peer-to-peer Post-Quantum Secure Messenger with Sealed Sender and Cover Traffic"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
rand = "0.9.2"
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
chacha20poly1305 = "0.10.1"
tracing = "0.1"
tracing-subscriber = "0.3"
secrecy = "0.8"
thiserror = "1.0"
blake3 = "1.4"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2.4"
zeroize = { version = "1.6", features = ["derive"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
dirs = "5.0"
hex = "0.4"

# WebRTC is opt-in via the `calling` feature. The 0.14 crate doesn't
# expose granular feature flags despite earlier wiring suggesting it
# does — the previous `default-features = false, features = [...]`
# stanza referenced names that aren't in the crate manifest, so the
# whole project failed to resolve dependencies. Made optional so
# `cargo build` works out of the box; pass `--features calling` to
# pull WebRTC in.
webrtc = { version = "0.14", optional = true }
# Logging is used by the WebRTC crate for diagnostics. Pulled in
# unconditionally — it's small, it's a well-behaved facade, and
# several other deps want it too.
log = "0.4"

# JNI Bridge for Android
jni = "0.21.1"
lazy_static = "1.4.0"

# P2P Network Layer
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "gossipsub",
    "tokio",
    "macros",
] }

# Identity / ZK / Invite-link plumbing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
crc32fast = "1.4"
url = "2.5"
percent-encoding = "2.3"

[features]
default = []
# Pull in the WebRTC stack and the in-progress `calling` module. It
# does *not* compile clean today — the API paths target an older
# version of webrtc-rs and several files reference types that have
# moved. Enabling this is for active development, not for users.
calling = ["dep:webrtc"]

[dev-dependencies]
tempfile = "3.10"
