[package]
name = "qubee_crypto"
version = "0.2.0"
edition = "2021"
authors = ["Victor Åhgren"]
description = "Peer-to-peer Post-Quantum Secure Messenger with Sealed Sender and Cover Traffic"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
# Pinned to 0.8 because the AEAD/RNG ecosystem here (chacha20poly1305
# 0.10, rand_chacha 0.3, ed25519-dalek 2.x) all standardised on
# rand_core 0.6 which `rand 0.8` re-exports. Bumping to rand 0.9 ↔
# rand_core 0.9 cascaded into trait-bound mismatches across half the
# crate; pinning here is the smallest correct fix.
rand = "0.8"
tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
# NIST-standardised post-quantum primitives (FIPS 203 ML-KEM-768 +
# FIPS 204 ML-DSA-44). Replaced the round-3 pqcrypto-kyber 0.8 /
# pqcrypto-dilithium 0.5 crates that cargo audit flagged as
# superseded (RUSTSEC-2024-0381 / RUSTSEC-2024-0380). ML-KEM-768
# pubkey size is 1184 bytes (same as Kyber-768) so the wire-stability
# canary keeps tracking; ML-DSA-44 ≈ Dilithium-2.
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"
chacha20poly1305 = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.3"
getrandom = "0.2"
secrecy = "0.10"
thiserror = "1.0"
blake3 = "1.4"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2.4"
zeroize = { version = "1.6", features = ["derive"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
dirs = "5.0"
hex = "0.4"

# WebRTC is opt-in via the `calling` feature. The 0.14 crate doesn't
# expose granular feature flags despite earlier wiring suggesting it
# does — the previous `default-features = false, features = [...]`
# stanza referenced names that aren't in the crate manifest, so the
# whole project failed to resolve dependencies. Made optional so
# `cargo build` works out of the box; pass `--features calling` to
# pull WebRTC in.
webrtc = { version = "0.14", optional = true }
# Logging is used by the WebRTC crate for diagnostics. Pulled in
# unconditionally — it's small, it's a well-behaved facade, and
# several other deps want it too.
log = "0.4"

# JNI Bridge for Android
jni = "0.21.1"
lazy_static = "1.4.0"
yamux = "0.13.10"


# P2P Network Layer
libp2p = { version = "0.55", features = [
    "tcp",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "kad",
    "mdns",
    "gossipsub",
    "tokio",
    "macros",
] }

# Identity / hybrid-signature / invite-link plumbing
# (no ZK — see jni_api.rs onboarding banner + README "Why no ZK")
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde", "zeroize"] }
base64 = "0.22"
crc32fast = "1.4"
url = "2.5"
percent-encoding = "2.3"

[target.'cfg(unix)'.dependencies]
# Required by src/security/secure_memory.rs for mlock/munlock and by
# the entropy mixer in secure_rng.rs. Was previously called from
# `unsafe { libc::... }` blocks without ever being declared, which is
# why the crate had been failing to resolve.
libc = "0.2"

[features]
default = []
# Pull in the WebRTC stack and the in-progress `calling` module. It
# does *not* compile clean today — the API paths target an older
# version of webrtc-rs and several files reference types that have
# moved. Enabling this is for active development, not for users.
calling = ["dep:webrtc"]
# Compile the legacy prototype modules (`hybrid_ratchet`,
# `secure_message`, `file_transfer`, `audio`, `sas`, `oob_secrets`).
# They reference dependency APIs that have since drifted; enabling
# this is for porting work, not for downstream consumers.
legacy = []
# Compile `jni_api.rs` on the host so the JNI surface can be type-
# checked without an Android target installed. Off by default — the
# Android JNI build picks the module up via `cfg(target_os = "android")`.
# Used by CI and during refactors of the JNI bridge.
_typecheck_jni = []

[dev-dependencies]
tempfile = "3.10"
# Property-based round-trip tests for canonical wire encoders.
# Counter-balances `tests/wire_stability.rs`'s pinned vectors with
# randomized inputs, catching encode/decode asymmetries that a single
# fixed example wouldn't cover.
proptest = "1.4"
# Microbenchmarks for the hot paths (Kyber KEM, ML-DSA-44 sign/verify,
# ChaCha20-Poly1305 group encrypt/decrypt). `cargo bench --no-run` is
# wired into CI as a smoke test; full runs land baseline numbers in
# `docs/perf/baseline.md`.
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "kyber_kem"
harness = false

[[bench]]
name = "mldsa_sign_verify"
harness = false

[[bench]]
name = "group_encrypt_decrypt"
harness = false

# Reproducible release profile. The goal is byte-identical .so output
# across machines given the pinned (toolchain, Cargo.lock, NDK, source)
# tuple. Notes on each setting:
#   - opt-level = 3            : default for release; pinned explicitly
#                                so a workspace-level override can't
#                                shift it.
#   - lto = "thin"             : reproducible across machines; "fat" LTO
#                                has historically been order-dependent.
#   - codegen-units = 1        : `> 1` introduces non-determinism in
#                                some rustc versions; serialising the
#                                codegen costs build time but stabilises
#                                output.
#   - strip = "symbols"        : strips debug + symbol tables from the
#                                shipped .so. Rebuild reproducibly via
#                                the `--remap-path-prefix` flags applied
#                                in build_rust.sh.
#   - panic = "abort"          : avoids unwind tables in the .so, which
#                                can carry symbol-table residuals.
#   - incremental = false      : incremental caches embed timestamps.
#   - debug = false            : already implied by `strip`, pinned for
#                                clarity.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
debug = false
